Downloads/TCA-InfraForge/config/tc-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tc-prometheus
  namespace: default
  labels:
    app: tc-prometheus
    tc.owner: "temitayo-charles"
    tc.platform: "tc-enterprise-devops"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tc-prometheus
  template:
    metadata:
      labels:
        app: tc-prometheus
        tc.owner: "temitayo-charles"
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.53.1
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus/
        - name: storage-volume
          mountPath: /prometheus/
        command:
          - '/bin/prometheus'
          - '--config.file=/etc/prometheus/prometheus.yml'
          - '--storage.tsdb.path=/prometheus/'
          - '--web.console.libraries=/etc/prometheus/console_libraries'
          - '--web.console.templates=/etc/prometheus/consoles'
          - '--web.enable-lifecycle'
          - '--web.external-url=http://localhost/prometheus/'
          - '--web.route-prefix=/prometheus/'
      volumes:
      - name: config-volume
        configMap:
          name: tc-prometheus-config
      - name: storage-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tc-prometheus-service
  namespace: default
  labels:
    app: tc-prometheus
    tc.owner: "temitayo-charles"
spec:
  selector:
    app: tc-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
